# Difference-generator

./: .coverage  .travis.yml  Makefile  README.md  coverage.xml  left_file_right_file.txt  pyproject.toml
.github/workflows/: hexlet-check.yml
gendiff/: __init__.py  build_yaml.py  cli.py  constants.py  create_diff_file.py  dict_commands.py  diff_structure.py  diff_tree.py  file_loader.py  generate_diff.py  loader.py  parser.py  statuses.py  structure_builder.py  test.py
gendiff/formaters/: __init__.py  format.py  format_choice.py  json.py  json_formating.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: __init__.py  result.txt  test_gendiff.py
tests/fixtures/: file1.yaml  file1b.yaml  file2.json  file2.yaml  file2b.yaml  json.txt  json_result.json  json_result.txt  plain.txt  plain_result.txt  result.txt  simple_json_result.txt  simple_yaml_result.txt  stylish.txt  stylish_result.txt  yaml_result.txt
